--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/pycharm+all,virtualenv,python,django,osx,windows
 
 secret.py
+.static_root
